/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.dac.proto.model.backup;

import "kvstore.proto";

option java_package = "com.dremio.dac.proto.model.backup";
option optimize_for = SIZE;

message BackupFileInfo {
  required com.dremio.datastore.KVStoreInfo kvstoreInfo = 1;
  required int64 checksum = 2; // crc32 checksum
  required int64 records = 3;
  optional bool binary = 4 [default = false];
}
